[bug] fix requirement wrapping

--- a/app/assets/stylesheets/basic.css
+++ b/app/assets/stylesheets/basic.css
@@ -61,13 +61,13 @@ a:focus {
   text-decoration: none;
 }
 
-#page a {
+#page a.action {
   display: inline-block;
   margin: 0 0.2em 0 0;
 }
 
-#page a:hover,
-#page a:focus {
+#page a.action:hover,
+#page a.action:focus {
   margin: 0 0 0 0.2em;
 }
 
@@ -304,21 +304,30 @@ ul#deliverables .timestop {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.deliverable_handle,
-.requirement_handle {
-  opacity: 0.4;
-  cursor: move;
+ul#deliverables li.deliverable {
+  padding-left: 20px;
+  position: relative;
 }
 
-ul#deliverables.active li ul {
-  zoom: 0.4;
+ul#deliverables .deliverable_handle,
+ul#deliverables .requirement_handle {
+  opacity: 0.4;
+  cursor: move;
+  display: block;
+  width: 20px;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+ul.requirements li {
+  position: relative;
+  padding-left: 20px
 }
 
 ul.requirements {
   min-height: 1em;
-}
-
-ul.requirements {
   font-size: 0.8em;
 }
 
@@ -344,6 +353,9 @@ img#twitter-icon {
 @media screen and (max-width: 600px) {
   body {
     font-size: 16px;
+  }
+  ul {
+    padding-left: 2em;
   }
 }
 
